Fix z-index glitch on logo
On resize, logo went under the diagonal stroke

--- a/dev/stylesheets/style.styl
+++ b/dev/stylesheets/style.styl
@@ -132,6 +132,9 @@ section
   &:after
     width     200%
     transform rotate(45deg)
+    
+  .logo--image
+    background-color white
   
   @media screen and (min-width $tabletPortrait['width'])
     &:before
@@ -162,6 +165,9 @@ section
     &:before
     &:after
       content none
+
+
+
 
 aside
   strong
