--- a/dev/stylesheets/zindex.styl
+++ b/dev/stylesheets/zindex.styl
@@ -19,8 +19,8 @@
 
 // 5
 .section--00
-  @media screen and (min-width $laptop('min-width'))
-    z-index 5
+  @media screen and (min-width $laptop['min-width'])
+    z-index 5 !important // glitch on resize
 
 
 // 4
